--- a/code/styles.css
+++ b/code/styles.css
@@ -1,109 +1,133 @@
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+}
+
+header {
+    background-color: #a7cddf;
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+}
+
+#profile {
+    background-color: #f9b8b6;
+    padding: 1em;
+    margin: 1em;
+}
+
+#profile > img {
+    outline: 0.3rem solid #fff;
+    margin: 0.5em 0;
+    width: 100%;
+    height: auto;
+}
+
+#profile > span {
+    font-size: 1.3em;
+    font-weight: 600;
+    padding-bottom: 1em;
+}
+
+.card {
+    border: 3px solid #006d9e;
+    margin: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+}
+
+.card .photo-label {
+    padding: 0.5rem;
+    background-color: #fff;
     text-align: center;
 }
 
-/* Heading Styles */
-h1 {
-    margin-top: 20px;
+/* Media Queries */
+
+/* Regular (Mobile) Layout */
+#page-wrapper {
+    padding: 1em;
 }
 
-h3 {
-    margin-top: 20px;
+/* 500px Layout */
+@media (min-width: 500px) {
+    #page-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
+
+    #profile {
+        flex: 1 1 100%; /* Takes full width */
+    }
+
+    #gallery {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        justify-content: center;
+    }
+
+    .card {
+        flex: 1 1 calc(50% - 1rem); /* Two columns */
+    }
 }
 
-/* Bubble Styles */
-.bubble {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
-    color: white;
+/* 750px Layout */
+@media (min-width: 750px) {
+    #page-wrapper {
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 2rem;
+    }
+
+    #profile {
+        flex: 1 1 25%; /* Profile takes 1/4 of the width */
+    }
+
+    #gallery {
+        flex: 1 1 75%; /* Gallery takes 3/4 of the width */
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
+
+    .card {
+        flex: 1 1 calc(33.33% - 1rem); /* Three columns */
+    }
 }
 
-/* Bubble Colors */
-.blue {
-    background-color: blue;
-}
+/* 1000px Layout */
+@media (min-width: 1000px) {
+    #page-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 3fr; /* Two-column grid: Profile and Gallery */
+        grid-gap: 2rem;
+        align-items: start;
+    }
 
-.red {
-    background-color: red;
-}
+    #profile {
+        grid-column: 1 / 2; /* Profile in the first column */
+        grid-row: 1;
+    }
 
-.green {
-    background-color: green;
-}
+    #gallery {
+        grid-column: 2 / 3; /* Gallery in the second column */
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* Three equal columns */
+        grid-gap: 1rem;
+    }
 
-/* Flexbox Challenge 1 */
-.challenge-1 {
-    display: flex;
-    justify-content: center;
-}
-
-/* Flexbox Challenge 2 */
-.challenge-2 {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row-reverse;
-}
-
-/* Flexbox Challenge 3 */
-.challenge-3 {
-    display: flex;
-    justify-content: flex-end;
-}
-
-/* Flexbox Challenge 4 */
-.challenge-4 {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-/* Flexbox Challenge 5 */
-.challenge-5 {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-/* Flexbox Challenge 6 */
-.challenge-6 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.challenge-6 .bubble {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Flexbox Challenge 7 */
-.challenge-7 {
-    display: flex;
-}
-
-.challenge-7 .red {
-    flex-grow: 1;
-}
-
-/* Flexbox Challenge 8 */
-.challenge-8 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.challenge-8 .red {
-    align-self: flex-end;
+    .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
