--- a/code/React/React-assignment4/src/App.css
+++ b/code/React/React-assignment4/src/App.css
@@ -1,7 +1,11 @@
 body{
   margin: 0;
+  box-sizing: border-box;
 }
 
+/* 
+Home page 
+*/
 h1{
   color: #ffffff;
   margin-right: auto;
@@ -23,6 +27,7 @@ header a{
   padding: 0.6rem;
   border-radius: 7px;
   text-decoration: none;
+  font-weight: 700;
 }
 
 header .active {
@@ -32,6 +37,7 @@ header .active {
 
 main {
   padding: 1.5rem;
+  
 }
 
 a{
@@ -42,11 +48,13 @@ a{
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  /* align-items: center; */
+  justify-content: center;
 }
 
 .recipe{
-  color: #ffffff;
-  background-color: #082c37;
+  color: #fff;
+  background-color: #082837;
   /* border: 2px solid #072e3a; */
   border-radius: 0.5rem;
   padding: 0.8rem;
@@ -59,6 +67,25 @@ a{
 .recipe h4{
   color: #c2efff;
   margin: 0.6rem 0.1rem;
+}
+
+/* 
+Recipe view page 
+*/
+.recipe-wrapper{
+  max-width: 800px;
+  margin: 1rem auto;
+}
+
+.recipe-wrapper > h2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.recipe-wrapper > h3{
+  margin-top: 0.5rem;
+  color: #97e1fc;
+  margin-top: 0.5rem;
 }
 
 #ingredients-wrapper, #instructions-wrapper{
@@ -74,12 +101,140 @@ a{
   margin-bottom: 0.3rem;
 }
 
-h2{
-  margin-top: 0.5rem;
-  margin-bottom: 0;
+.edit-btn{
+  /* width: 50%; */
+  padding: 0.75rem;
+  background-color: #7344ff;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 1rem;
+  color: #ececec;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-#author{
-  margin-top: 0.5rem;
-  color: #a4e7ff;
+.edit-btn:hover{
+  background-color: #6d3dff;
+}
+
+
+/* 
+Create page 
+*/
+.error-message{
+  color: #ffffff;
+  background-color: #ff4c4c;
+  padding: 0.75rem 1rem;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.create-wrapper{
+  border-radius: 1rem;
+  padding: 1.8rem;
+  max-width: 700px;
+  margin: 0.5rem auto;
+  background-color: #2c2c2c;
+  /* box-shadow: 0 0 3px #000000b3; */
+}
+
+.create-wrapper h2{
+  margin-top: 0;
+  text-align: center;
+}
+
+form label{
+   display: block;
+   margin-bottom: 0.3rem;
+   margin-top: 0.8rem;
+   font-weight: 500;
+   font-size: 1.2rem;
+}
+
+[type="text"]{
+  height: 1.8rem;
+}
+
+form input[type="text"], form textarea{
+  width: 100%;
+  border: 1px solid #444444;
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  color: #ffffff;
+  font-size: 1rem;
+  /* margin: 0.2rem; */
+  transition: border-color 0.3s ease;
+  box-sizing: border-box;
+  background-color: #3f3f3f;
+}
+
+form input[type="text"]:focus,
+form textarea:focus {
+  border-color: #9e71b5;
+  outline: none;
+}
+
+textarea{
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+form p {
+  font-size: 0.85rem;
+  color: #bcbcbc;
+  margin-top: 0.2rem;
+}
+
+form button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #7344ff;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 1rem;
+  color: #ececec;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 1rem;
+}
+
+
+form .btn:hover:not(:disabled) {
+  background-color: #6638f1;
+}
+
+form button:disabled {
+  background-color: #888;
+  cursor: not-allowed;
+}
+
+/*
+Edit page
+*/
+
+.cancel-btn{
+  background-color: #063e58;
+  transition: background-color 0.3s ease;
+}
+
+.cancel-btn:hover{
+  background-color: #053246;
+}
+
+.delete-btn{
+  background-color: #933636;
+  transition: background-color 0.3s ease;
+}
+
+.delete-btn:hover{
+  background-color: #812e2e;
+}
+
+.btn-group{
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
 }
