--- a/code/React/React-assignment4/src/App.css
+++ b/code/React/React-assignment4/src/App.css
@@ -14,7 +14,7 @@ h1{
 }
 
 header{
-  background-color: #0c1b31;
+  background-color: #152744;
   display: flex;
   /* flex-direction: row; */
   justify-content: flex-end;
@@ -37,11 +37,11 @@ header .active {
 
 main {
   padding: 1.5rem;
-  
 }
 
 a{
   text-decoration: none;
+  color: #e0e0e0;
 }
 
 #recipe-wrapper{
@@ -54,7 +54,7 @@ a{
 
 .recipe{
   color: #fff;
-  background-color: #082837;
+  background-color: #0b3143;
   /* border: 2px solid #072e3a; */
   border-radius: 0.5rem;
   padding: 0.8rem;
@@ -220,7 +220,7 @@ Edit page
 }
 
 .cancel-btn:hover{
-  background-color: #053246;
+  background-color: #094965;
 }
 
 .delete-btn{
@@ -229,7 +229,7 @@ Edit page
 }
 
 .delete-btn:hover{
-  background-color: #812e2e;
+  background-color: #bc2b2b;
 }
 
 .btn-group{
